force-app/main/default/objects/Integration_Data__c/Integration_Data__c.object-meta.xml
<CustomObject>
    <label>Integration Data</label>
    <nameField>
        <displayFormat>ID-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>