force-app/main/default/objects/Integration_Data__c/fields/check_type__c.field-meta.xml
<CustomField>
    <fullName>check_type__c</fullName>
    <label>check type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>