force-app/main/default/objects/Integration_Data__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate the Claim with the Integration data.</description>
    <label>Claim</label>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>Integration Data</relationshipLabel>
    <relationshipName>Integration_Data</relationshipName>
    <type>Lookup</type>
</CustomField>