force-app/main/default/objects/Integration_Data__c/fields/ERA_Generated__c.field-meta.xml
<CustomField>
    <fullName>ERA_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the ERA generated for specific claim.</description>
    <label>ERA Generated</label>
    <type>Checkbox</type>
</CustomField>