force-app/main/default/objects/Integration_Data__c/fields/ERA_Id__c.field-meta.xml
<CustomField>
    <fullName>ERA_Id__c</fullName>
    <description>Denote the ERA id for specific claim.</description>
    <label>ERA Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>