force-app/main/default/objects/Integration_Data__c/fields/Integration_Data__c.field-meta.xml
<CustomField>
    <fullName>Integration_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a self lookup field and is used to associate the Integration data.</description>
    <label>Integration Data</label>
    <referenceTo>Integration_Data__c</referenceTo>
    <relationshipLabel>Integration Data</relationshipLabel>
    <relationshipName>Integration_Data</relationshipName>
    <type>Lookup</type>
</CustomField>