force-app/main/default/objects/Integration_Data__c/fields/Last_ERA_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_ERA_Id__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last ERA Id</label>
    <type>Checkbox</type>
</CustomField>