force-app/main/default/objects/Integration_Data__c/fields/Last_Response_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Response_Id__c</fullName>
    <label>Last Response Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>