force-app/main/default/objects/Integration_Data__c/fields/Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount__c</fullName>
    <description>Represents the total amount paid by the insurance provider.</description>
    <label>Paid Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>