force-app/main/default/objects/Integration_Data__c/fields/Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Date__c</fullName>
    <description>Represents the date when the Amount is to be paid.</description>
    <label>Paid Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>