force-app/main/default/objects/Integration_Data__c/fields/Payer_Id__c.field-meta.xml
<CustomField>
    <fullName>Payer_Id__c</fullName>
    <description>Unique Identification of Payment.</description>
    <label>Payer Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>