force-app/main/default/objects/Integration_Data__c/fields/Payer_Name__c.field-meta.xml
<CustomField>
    <fullName>Payer_Name__c</fullName>
    <description>Name of Insurance Amount  Payer.</description>
    <label>Payer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>