force-app/main/default/objects/Integration_Data__c/fields/Posted__c.field-meta.xml
<CustomField>
    <fullName>Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Status indicating whether claim and ERA have been posted.</description>
    <label>Posted</label>
    <type>Checkbox</type>
</CustomField>