force-app/main/default/objects/Integration_Data__c/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <description>Represents the name of health care Provider.</description>
    <label>Provider Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>