force-app/main/default/objects/Integration_Data__c/fields/Provider_NPI__c.field-meta.xml
<CustomField>
    <fullName>Provider_NPI__c</fullName>
    <description>NPI is a unique identification number for covered health care providers.</description>
    <label>Provider NPI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>