force-app/main/default/objects/Integration_Data__c/fields/Provider_Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Tax_Id__c</fullName>
    <description>Represents the tax id of the healthcare provider.</description>
    <label>Provider Tax Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>