force-app/main/default/objects/Integration_Data__c/fields/Received_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Received_Date_Time__c</fullName>
    <description>Timestamp indicating when the response was received.</description>
    <label>Received Date/Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>