force-app/main/default/objects/Integration_Data__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Indicates the type of response recieved, such as ERA remmitence or payer response.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERA Remitance Search</fullName>
            </value>
            <value>
                <fullName>Payer response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>