force-app/main/default/objects/Integration_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Last_Response_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ERA_Generated__c</columns>
    <columns>ERA_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>